--- a/app/src/main/res/layout/activity_card_method.xml
+++ b/app/src/main/res/layout/activity_card_method.xml
@@ -13,6 +13,7 @@
         android:text="Silahkan gesekan kartu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="28sp"/>
 
 </android.support.constraint.ConstraintLayout>
