--- a/app/src/main/res/layout/activity_void.xml
+++ b/app/src/main/res/layout/activity_void.xml
@@ -10,7 +10,7 @@
         android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/im_void_header"
+        android:src="@drawable/ic_void"
         />
     <android.support.design.widget.TextInputLayout
         style="@style/support_textinputlayout_white"
