--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -10,109 +10,30 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="@color/white"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_above="@+id/footer">
 
-        <LinearLayout
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_cart"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:paddingBottom="@dimen/favorite_item_vertical_padding"
-            android:paddingLeft="@dimen/item_cart_padding"
-            android:paddingRight="@dimen/item_cart_padding"
-            android:paddingTop="@dimen/item_cart_vertical_padding">
-
-            <ImageView
-                android:id="@+id/item_cart_iv_image"
-                android:layout_width="@dimen/item_cart_iv_image_width"
-                android:layout_height="@dimen/item_cart_iv_image_width"
-                android:layout_marginRight="8dp"
-                android:contentDescription="Gambar shop"
-                android:scaleType="centerCrop" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:id="@+id/item_cart_ll_info_container"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <TextView
-                        android:id="@+id/item_cart_tv_item_name"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1.0"
-                        android:ellipsize="end"
-                        android:maxLines="2"
-                        android:textSize="@dimen/text_size_medium_16"
-                        tools:text="Sepatu Bata" />
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/main_padding_extra_very_small_3dp"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/item_cart_tv_price"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="end|right"
-                            android:gravity="right"
-                            android:textSize="@dimen/text_size_medium_16"
-                            tools:text="Rp 15.000" />
-
-                        <TextView
-                            android:id="@+id/item_cart_tv_commission_details"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="end|right"
-                            android:gravity="right"
-                            android:textSize="@dimen/text_size_extra_small"
-                            tools:text="Komisi @ 12.000" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/main_padding_extra_very_small"
-                    android:gravity="bottom"
-                    android:textSize="@dimen/text_size_extra_small" />
-
-                <RelativeLayout
-                    android:id="@+id/item_cart_ll_action_container"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/main_padding_extra_very_small"
-                    android:orientation="horizontal">
-
-
-
-
-                </RelativeLayout>
-
-            </LinearLayout>
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="#1F000000"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            />
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/footer"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="#1F000000"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -156,7 +77,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/main_padding_small"
-                android:gravity="end" />
+                android:gravity="end"
+                tools:text="Rp. 100.000"/>
         </LinearLayout>
 
         <LinearLayout
