--- a/app/src/main/res/layout/activity_settlement.xml
+++ b/app/src/main/res/layout/activity_settlement.xml
@@ -4,82 +4,112 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.bountyhunter.kudo.kudoposretail.activity.SettlementActivity"
-    android:padding="16dp">
+    android:padding="16dp"
+    tools:context="com.bountyhunter.kudo.kudoposretail.activity.SettlementActivity">
 
     <ImageView
         android:id="@+id/logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:src="@drawable/ic_piggy_bank"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/e_wallet_ll"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:orientation="horizontal"
         android:padding="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:text="E-Wallet"/>
+            android:text="E-Wallet"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/e_wallet_settlement_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="end"
-            tools:text="Rp. 50.000"/>
+            tools:text="Rp. 50.000" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/card_ll"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:orientation="horizontal"
         android:padding="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/e_wallet_ll">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:text="Kartu"/>
+            android:text="Kartu"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/card_settlement_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="end"
-            tools:text="Rp. 50.000"/>
+            tools:text="Rp. 50.000" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/cash_ll"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:orientation="horizontal"
         android:padding="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/card_ll">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:text="Tunai"/>
+            android:text="Tunai"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/cash_settlement_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="end"
-            tools:text="Rp. 50.000"/>
+            tools:text="Rp. 50.000" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/print_settlement_button"
+        android:layout_width="0dp"
+        android:layout_height="49dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:background="@drawable/im_button_blue"
+        android:text="Cetak Settlement"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
