--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -9,14 +9,19 @@
         app:showAsAction="ifRoom"
         />
     <item
+        android:id="@+id/menu_history"
+        android:title="@string/menu_history"
+        android:orderInCategory="2"
+        app:showAsAction="never"/>
+    <item
         android:id="@+id/menu_void"
         android:title="@string/menu_void"
-        android:orderInCategory="2"
+        android:orderInCategory="3"
         app:showAsAction="never"/>
     <item
         android:id="@+id/menu_settlement"
         android:title="@string/settlement"
-        android:orderInCategory="3"
+        android:orderInCategory="4"
         app:showAsAction="never"/>
 
 </menu>
