--- a/app/src/main/res/layout/activity_void.xml
+++ b/app/src/main/res/layout/activity_void.xml
@@ -6,53 +6,63 @@
     android:layout_height="match_parent"
     android:padding="16dp"
     tools:context="com.bountyhunter.kudo.kudoposretail.activity.VoidActivity">
+
     <ImageView
         android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_void"
-        />
+        app:srcCompat="@drawable/ic_void" />
+
     <android.support.design.widget.TextInputLayout
-        style="@style/support_textinputlayout_white"
         android:id="@+id/trans_layout"
+        style="@style/support_textinputlayout_white"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/header">
 
         <EditText
-            style="@style/edittext_with_image"
             android:id="@+id/transaction_number_et"
-            android:hint="No. Transaksi"
-            android:inputType="number"
+            style="@style/edittext_with_image"
             android:drawableLeft="@drawable/ic_looks_one"
-            />
+            android:hint="No. Transaksi"
+            android:inputType="number" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
-        style="@style/support_textinputlayout_white"
         android:id="@+id/pin_layout"
+        style="@style/support_textinputlayout_white"
         app:layout_constraintTop_toBottomOf="@id/trans_layout">
 
         <EditText
-            style="@style/edittext_with_image"
             android:id="@+id/pin_et"
-            android:hint="Verifikasi Password"
-            android:inputType="textPassword"
+            style="@style/edittext_with_image"
             android:drawableLeft="@drawable/ic_lock_black_18dp"
-        />
+            android:hint="Verifikasi Password"
+            android:inputType="textPassword" />
     </android.support.design.widget.TextInputLayout>
 
     <Button
         android:id="@+id/void_button"
         android:layout_width="240dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:background="@drawable/im_button_blue"
         android:text="Batalkan"
         android:textColor="@color/white"
-        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/pin_layout"
         tools:layout_editor_absoluteY="16dp" />
+
+    <ProgressBar
+        android:id="@+id/void_progress"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/pin_layout" />
 
 </android.support.constraint.ConstraintLayout>
