--- a/app/src/main/res/layout/activity_catalog.xml
+++ b/app/src/main/res/layout/activity_catalog.xml
@@ -1,37 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.bountyhunter.kudo.kudoposretail.activity.CatalogActivity">
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/search_layout"
+    <EditText
+        android:drawableLeft="@drawable/ic_search_black_24dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <EditText
-            android:drawableLeft="@drawable/ic_search_black_24dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/search_tv"
-            android:hint="Search Product"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </android.support.constraint.ConstraintLayout>
-
+        android:layout_height="wrap_content"
+        android:id="@+id/search_tv"
+        android:hint="Search Product" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_products_catalog"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/search_layout"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="8dp"
+        android:layout_below="@+id/search_tv"
+        />
 
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
