--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,7 +64,7 @@
                     android:id="@+id/email"
                     android:layout_height="42dp"
                     android:layout_gravity="bottom"
-                    android:hint="NO HP atau Email"
+                    android:hint="Email"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
                     android:singleLine="true" />
@@ -103,6 +103,15 @@
 
         </LinearLayout>
 
+        <Button
+            android:id="@+id/btn_change_url"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/textview_register"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="29dp"
+            android:text="CHOOSE BASE URL" />
+
         <TextView
             android:layout_marginTop="24dp"
             android:layout_centerHorizontal="true"
@@ -120,5 +129,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"/>
+
     </RelativeLayout>
 </LinearLayout>
